# mumu_cli

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  docs.md  mumu_cli_docs.md
docs for executable/: mumu setting --all --vmindex 0.json  mumu setting --info gpu_mode.json  mumu setting --info performance_mode.json  mumu setting --info renderer_mode.json  mumu setting --info resolution_mode.json
src/: error.rs  lib.rs  types.rs
src/types/: control.rs  idx.rs  mod.rs  player_info.rs  setting.rs  simu.rs  vm_index.rs
