[package]
name = "mumu_cli"
version = "0.2.0"
edition = "2021"
description = "Rust wrapper for the MuMu Player command-line tool (mumu)"
license = "MIT"
repository = "https://github.com/omaggvin/mumu_cli"
keywords = ["mumu", "android", "emulator", "automation"]
categories = ["os", "api-bindings"]

[dependencies]
tokio = { version = "1", features = ["process", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
base64 = "0.22"
